--- a/packages/frontend-vite/src/main.scss
+++ b/packages/frontend-vite/src/main.scss
@@ -5,6 +5,25 @@
 body {
   -webkit-tap-highlight-color: transparent;
   //font-family: Roboto;
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-400;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-300
+  }
 }
 
 button:focus {
